--- a/layouts/shortcodes/synopsis-telemetry.html
+++ b/layouts/shortcodes/synopsis-telemetry.html
@@ -2,5 +2,7 @@
 <html lang="en">
 <body>
 Collect data from sensors in a remote environment and make the sensed measurements available for use by other components of an IoT solution.
+<hr/>
+Personae: {{ $.Page.Params.personae }}
 </body>
 </html>
