added web analytics

--- a/layouts/partials/custom-head.html
+++ b/layouts/partials/custom-head.html
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="/css/theme-atlas.css">
+<script src="https://a0.awsstatic.com/s_code/js/1.0/awshome_s_code.js"></script>
