aligning synopsis with other mediums

--- a/layouts/shortcodes/synopsis-archiving.html
+++ b/layouts/shortcodes/synopsis-archiving.html
@@ -2,6 +2,6 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <body>
-Save what a device measures and make the sensed measurements available for use in their original or processed form.
+A device's measurements are saved and made available for use in their original or processed form.
 </body>
 </html>
