Synopsis file for protocol translation added.

--- a/layouts/shortcodes/synopsis-gateway.html
+++ b/layouts/shortcodes/synopsis-gateway.html
@@ -2,6 +2,6 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <body>
-A device acts as an intermediary between local devices as well as devices and the cloud.
+Design pattern used on IoT edge devices to translate between different protocols.
 </body>
 </html>
