--- a/layouts/shortcodes/synopsis-protocol-translation.html
+++ b/layouts/shortcodes/synopsis-protocol-translation.html
@@ -2,6 +2,6 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <body>
-Design pattern used on IoT edge devices to translate between different protocols.
+A device acts as an intermediary between local devices as well as devices and the cloud.
 </body>
 </html>
