--- a/src/hugo/layouts/partials/menu-footer.html
+++ b/src/hugo/layouts/partials/menu-footer.html
@@ -7,6 +7,6 @@
 <a class="github-button" href="https://github.com/aws/iot-atlas/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork aws/iot-atlas on GitHub">Fork</a>
 </center>
 <script async defer src="https://buttons.github.io/buttons.js"></script>
-<div style="font-size: xx-small; padding: 4em 0em 0em 4em;">
+<div style="font-size:xs-small; padding: 4em 1em 0em 1em;">
   Site built: {{ now.UTC.Format "2006-01-02 T15:04:05 UTC" }}
 </div>
